src/test/deca/context/invalid/variables/bool_error.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2022

{
    boolean x = 1 ; 
}
